T2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gmail
spec:
  type: ExternalName
  externalName: smtp.gmail.com
