T2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
  - host: t2.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: locacaobike
            port:
              number: 80
